--- a/05_optional_tune-cluster.yaml
+++ b/05_optional_tune-cluster.yaml
@@ -3,6 +3,16 @@
     - vars/ansible-vars
   become: yes
   tasks:
+    - name: Get installed packages 
+      package_facts:
+        manager: auto
+
+    - name: Install chrony if no other time sysnc daemon is installed
+      apt:
+        name: chrony
+        state: present 
+      when: ansible_facts['os_family'] == "Debian" and 'ntp' not in ansible_facts.packages and 'ntpsec' not in ansible_facts.packages
+
     - name: Install tuned package on Debian
       apt: 
         name: tuned
