--- a/preflight.yaml
+++ b/preflight.yaml
@@ -56,4 +56,10 @@
       with_items: 
         - gpg
 
+- hosts: localhost 
+    - name: Install necessary Ansible collection that do not come with ansible-core
+      community.general.ansible_galaxy_install:
+        type: collection
+        name: community.posix
+      when: ansible_facts['os_family'] == "RedHat"
 
