--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,65 +1,46 @@
-## Use this inventory to layout a plan for your storage cluster.
 all:
   vars: 
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    # adjust your python interpreter as needed
     ansible_python_interpreter: /usr/bin/python3
   children: 
-   # all storage cluster members. Used to add repositories, installl quobyte-server etc.
    quobyteservers:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-      example-host-d.com:
-      example-host-e.com:
-   # On which hosts shall the webconsole be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    webconsoleservices:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-   # On which hosts shall the REST-API be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    apiservices:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-   # On which hosts shall the registry service be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    registryservices:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-   # On which hosts shall the metadata service be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    metadataservices:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-   # On which hosts shall the data service be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    dataservices:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-      example-host-d.com:
-      example-host-e.com:
-   # On which hosts shall the object storage proxy be running?
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
    s3services:
     hosts:
-      example-host-a.com:
-      example-host-b.com:
-      example-host-c.com:
-   # On which hosts shall the NFS proxy be running?
-   nfsservices:
-    hosts:
-      example-host-a.com:
+      10.164.0.26:
+      10.164.0.30:
+      10.164.0.34:
 
-   # On which hosts shall the client be installed?
-   # This will install the client systemd unit that 
-   # mounts all available volumes.
    clients: 
     hosts:
-      example-host-f.com:
-      
+      10.164.0.27:
 
