--- a/firstrun_interview.yaml
+++ b/firstrun_interview.yaml
@@ -14,6 +14,7 @@
 
     - name: password
       prompt: "Enter the password for the Quobyte superadmin account" 
+      confirm: true
 
     - name: license 
       prompt: "Enter a valid license key" 
