--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -37,6 +37,10 @@
         rpm_distribution_string: "SLE"
       when: ansible_distribution is regex('SLES') 
 
+    - name: Get installed packages
+      package_facts:
+         manager: auto
+
     - name: Add Quobyte deb822 repository to sources list
       deb822_repository:
         types: "deb"
@@ -81,6 +85,12 @@
         - tuned
       when: ansible_facts['os_family'] == "Debian"
  
+    - name: Install chrony if no other time sysnc daemon is installed
+      apt:
+        name: chrony
+        state: present
+      when: ansible_facts['os_family'] == "Debian" and 'ntp' not in ansible_facts.packages and 'ntpsec' not in ansible_facts.packages
+
     - name: Install RPM packages
       yum: 
         update_cache: yes
