--- a/07_optional_add_s3services.yaml
+++ b/07_optional_add_s3services.yaml
@@ -19,6 +19,11 @@
       with_items: 
          - quobyte-s3
 
+    - name: Test qmqmt version 
+      shell:
+        cmd: qmgmt --version | cut -c 1 
+      register: qmgmt_version
+
     - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
@@ -26,11 +31,17 @@
     - name: Export systemconfig 
       shell:
         cmd: qmgmt -u {{ api_service }} systemconfig export /tmp/systemconfig
+      when: '"4" in qmgmt_version.stdout_lines'
 
     - name: Register systemconfig
       shell: 
         cmd: cat /tmp/systemconfig
       register: systemconfig
+
+    - name: Export systemconfig for version 5
+      shell:
+        cmd: qmgmt -u {{ api_service }} systemconfig export --format=proto /tmp/systemconfig
+      when: '"5" in qmgmt_version.stdout_lines'
 
     - name: Add s3 config to systemconfig
       lineinfile:
@@ -50,6 +61,13 @@
       shell:
         cmd: /usr/bin/qmgmt -u {{ api_service }} systemconfig import /tmp/systemconfig
       tags: system
+      when: '"4" in qmgmt_version.stdout_lines'
+
+    - name: Import system configuration
+      shell:
+        cmd: /usr/bin/qmgmt -u {{ api_service }} systemconfig import --format=proto /tmp/systemconfig
+      tags: system
+      when: '"5" in qmgmt_version.stdout_lines'
 
 
 - hosts: s3services 
